# intrinsic-aic-team-autoencoder

./: AGENTS.md  CLAUDE.md
context/: README.md
context/00_challenge/: 00_overview.md  01_phases.md  02_qualification_trials.md  03_rules_compliance.md  04_scoring.md
context/01_environment/: 00_setup.md  01_scene.md  02_task_board.md  03_assets_catalog.md  04_docker_pixi.md
context/02_interfaces/: 00_topic_inventory.md  01_observation_msg.md  02_motion_messages.md  03_task_action.md  04_controller.md
context/03_policy/: 00_framework.md  01_lifecycle_contract.md  02_baselines.md  03_writing_a_policy.md  04_pitfalls.md
context/04_training/: 00_overview.md  01_teleop_data.md  02_lerobot.md  03_isaac_lab.md  04_mujoco.md  05_keystone_dataset.md  06_local_eval_loop.md  07_first_pass_recipe.md
context/05_evaluation/: 00_local_eval.md  01_scoring_examples.md  02_results_files.md
context/06_submission/: 00_packaging.md  01_upload.md  02_checklist.md
context/07_team/: 00_approach.md  01_decisions_log.md  02_experiments.md  03_resources.md  05_keystone_playbook.md  06_dr_verification.md  07_data_collection_status.md
context/08_reference/: 00_glossary.md  01_troubleshooting.md
context/09_methods/: 00_index.md  01_classical.md  02_il_bc.md  03_il_act.md  04_il_diffusion_policy.md  05_il_vqbet.md  06_il_force_aware.md  (+16 more)
data_collection_v2/: README.md  __init__.py  cli.py  session_driver.py
data_collection_v2/recorder/: package.xml  setup.cfg  setup.py
data_collection_v2/recorder/data_collection_v2_recorder/: boundary_detector.py  lerobot_row.py  recorder_node.py
(+37 files in other folders)
