<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_collection_v2_recorder</name>
  <version>0.1.0</version>
  <description>v2 rclpy recorder: writes LeRobot v2 parquet episodes driven by aic_model lifecycle transitions.</description>
  <maintainer email="smohite@sharkninja.com">team-autoencoder</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aic_model_interfaces</depend>
  <depend>aic_control_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
